@@ -1979,6 +1979,9 @@ void sec_audit_logger_native(modsec_rec *msr) {
             sec_auditlog_write(msr, text, strlen(text));
         }
 
+#ifdef DLOG_NO_STOPWATCH
+		if (msr->txcfg->debuglog_level >= 9) {
+#endif
         /* Stopwatch; left in for compatibility reasons */
         text = apr_psprintf(msr->mp, "Stopwatch: %" APR_TIME_T_FMT " %" APR_TIME_T_FMT " (- - -)\n",
             msr->request_time, (now - msr->request_time));
@@ -1992,6 +1995,9 @@ void sec_audit_logger_native(modsec_rec *msr) {
                 "; %s\n", msr->request_time, (now - msr->request_time), perf_all);
             sec_auditlog_write(msr, text, strlen(text));
         }
+#ifdef DLOG_NO_STOPWATCH
+		}
+#endif
 
         /* Our response body does not contain chunks */
         /* ENH Only write this when the output was chunked. */
